--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <!-- Change the title description to "Horiseon Solution Services" because it has the company's name and what they offer.-->
+    <title>Horiseon Solution Services</title>
 </head>
 
 <body>
-    <div class="header">
+    <!-- Changed 'div' to 'section' element -->
+    <section class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <!-- Changed 'div' to 'nav' element -->
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,17 +25,19 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
-    <div class="hero"></div>
+        </nav>
+    </section>
+    <!-- Changed 'div' to 'section' element and added a 'title' attribute to describe what is occuring in the background image. -->
+    <section class="hero" title="Four people meeting at a table looking over papers."></section>
     <div class="content">
-        <div class="search-engine-optimization">
+        <!-- Changes 'div' to 'section' element -->
+        <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
+        </section>
         <div id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -80,3 +85,8 @@
 </body>
 
 </html>
+
+<!-- Questions for Office Hours
+1. Is it okay to use a title attribute instead of alt for the background image on line 30?
+2. Is it okay to keep the h2 tag at the bottom even though it comes after and h3 tag?
+-->
