--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@ THEN I find a concise, descriptive title -->
     </section>
     <!-- Changed 'div' to 'footer' element -->
     <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <!-- Changed 'h2' tag to 'h4' tag to follow sequential order. -->
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
