Condensed and organized selectors

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@ WHEN I view the title element
     <!-- Changed 'div' to 'section' element -->
     <section class="content">
         <!-- Changes 'div' to 'section' element and added 'id' element to make navbar link function-->
-        <section id="search-engine-optimization" class="search-engine-optimization">
+        <!-- Changed 'search-engine-optimization' to 'services' class -->
+        <section id="search-engine-optimization" class="services">
             <!-- Added an 'alt' attribute to the image displayed -->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
                 alt="A desk filled with a laptop, coffee, magnifying glass, a pencil holder filled with colored pencils and markers, and a notebook with the words 'Content', 'Headings', 'Mobile Compatibility', 'Social Media', 'Link Building' and 'Backlink' surrounding the word 'SEO'." />
@@ -65,7 +66,8 @@ WHEN I view the title element
             </p>
         </section>
         <!-- Changed 'div' to 'section' element -->
-        <section id="online-reputation-management" class="online-reputation-management">
+        <!-- CHanged 'online-reputation-management' to 'services' class -->
+        <section id="online-reputation-management" class="services">
             <!-- Added an 'alt' attribute to the image -->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right"
                 alt="A person on a laptop and phone at the same time. The laptop screen says 'Reputation' with colorful graphs underneath it." />
@@ -77,7 +79,8 @@ WHEN I view the title element
             </p>
         </section>
         <!-- Changed 'div' to 'section' element -->
-        <section id="social-media-marketing" class="social-media-marketing">
+        <!-- Changed 'social-media-marketing' to 'services' class -->
+        <section id="social-media-marketing" class="services">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left"
                 alt="A table with six people around it collaborating and using words like, 'Like', 'Tweet', 'Media', and 'Share'." />
             <h2>Social Media Marketing</h2>
@@ -90,8 +93,8 @@ WHEN I view the title element
     </section>
     <!-- Changed 'div' to 'section' element -->
     <section class="benefits">
-        <!-- Changed 'div' to 'section' element -->
-        <section class="benefit-lead">
+        <!-- Changed 'div' to 'section' element and 'benefit-lead' to 'icons' class. -->
+        <section class="icons">
             <h3>Lead Generation</h3>
             <!-- Added 'alt' attribute -->
             <img src="./assets/images/lead-generation.png"
@@ -101,8 +104,8 @@ WHEN I view the title element
                 to your website.
             </p>
         </section>
-        <!-- Changed 'div' to 'section' element -->
-        <section class="benefit-brand">
+        <!-- Changed 'div' to 'section' element and 'benefit-brand' to 'icons' class.-->
+        <section class="icons">
             <h3>Brand Awareness</h3>
             <!-- Added 'alt' attribute -->
             <img src="./assets/images/brand-awareness.png"
@@ -112,8 +115,8 @@ WHEN I view the title element
                 for your business.
             </p>
         </section>
-        <!-- Changed 'div' to 'section' element -->
-        <section class="benefit-cost">
+        <!-- Changed 'div' to 'section' element and 'benefit-cost' to 'icons' class. -->
+        <section class="icons">
             <h3>Cost Management</h3>
             <!-- Added an 'alt' attribute -->
             <img src="./assets/images/cost-management.png" alt="An all black icon of gears and dollar signs." />
