Updated missing semantics in index.html file

--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
             </ul>
         </nav>
     </section>
-    <!-- Changed 'div' to 'section' element and added a 'title' attribute to describe what is occuring in the background image. -->
+    <!-- Changed 'div' to 'section' element and added a 'alt' attribute to describe what is occuring in the background image. -->
     <section class="hero" alt="Four people meeting at a table looking over papers.">
-        <span class="background-image" role="img" aria-label="alt text"></span>
     </section>
     <!-- Changed 'div' to 'section' element -->
     <section class="content">
@@ -53,7 +52,7 @@
             </p>
         </section>
         <!-- Changed 'div' to 'section' element -->
-        <!-- CHanged 'online-reputation-management' to 'services' class -->
+        <!-- Changed 'online-reputation-management' to 'services' class -->
         <section id="online-reputation-management" class="services">
             <!-- Added an 'alt' attribute to the image -->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right"
